Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignObjectField.quorum
class Main
    undefined v = Test()
    action Main
    end

    action Test() returns undefined
        Object var
        return var
    end
end